<resources>
    <string name="app_name">SasahurFoods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_tab_home">Home\n</string>
    <string name="tittle_tab_cart">Cart\n</string>
    <string name="tittle_tab_person">Profile\n</string>
    <string name="location">Location</string>
    <string name="menu_desc">This description</string>
    <string name="add_item">Tambah Pesanan</string>
    <string name="_0">0</string>
    <string name="add_value">+</string>
    <string name="decrease_value">-</string>
    <string name="text_name">Hi %s 👋</string>
    <string name="text_name_user">Hi 👋</string>
    <string name="text_greetings">Makan apa hari ini &#8230;?</string>
    <string name="text_desc_banner">Promo Bulan ramadan berkah, dapatkan diskon hingga 50%, mulai dari makanan, minuman, dan jajanan! </string>
    <string name="title_desc">Diskon Cepat, Hanya Hari Ini!! </string>
    <string name="text_list_menu">List menu yang tersedia</string>
    <string name="text_grid_mode">Grid Mode</string>
    <string name="text_list_mode">List Mode</string>
    <string name="text_profile_main">Profil</string>
    <string name="edit">Edit</string>
    <string name="save">Simpan</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_title_your_cart">Pesanan</string>
    <string name="text_hint_notes">isi note</string>
    <string name="text_delivery_method">Pengiriman</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-wallet</string>
    <string name="shopping_summary">Detail Pesanan</string>
    <string name="text_title_order_confirmation">Konfirmasi Pesanan</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_is_empty">Tidak ada pesanan</string>
    <string name="text_add_to_cart_success">Sukses Menambah Pesanan</string>
    <string name="add_to_cart_failed">Pesanan gagal</string>
    <string name="loading">Loading</string>
    <string name="detail_total_price">Total : %1$s</string>
    <string name="text_finish">Selesai</string>
    <string name="add_menu_first">Tambahkan Item</string>
    <string name="home_header_banner">https://raw.githubusercontent.com/akmalinnn/sasahursFood-assets/main/banner/bg_banner.webp</string>
    <string name="home_header_discount">https://github.com/akmalinnn/sasahursFood-assets/blob/main/banner/ic_discount_banner.jpg?raw=true</string>
    <string name="home_header_food">https://github.com/akmalinnn/sasahursFood-assets/blob/main/banner/ic_food_banner.png?raw=true</string>
    <string name="checkout_success">Checkout berhasil!</string>

    <string name="text_password_does_not_match">Password tidak Sesuai</string>
    <string name="text_error_email_empty">Email tidak boleh kosong!</string>
    <string name="text_error_email_invalid">Masukkan email yang valid!</string>
    <string name="text_error_password_empty">Password tidak boleh kososng </string>
    <string name="text_error_password_less_than_8_char">Password kurang dari 8 karakter!</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong!</string>
    <string name="title_email_input_profile">Email</string>
    <string name="title_password_input_profile">Password</string>
    <string name="password_hint">Konfirmasi Password</string>
    <string name="toast_error">Tolong masukkan data yang benar</string>
    <string name="text_login_title">Login</string>
    <string name="text_nav_to_register">Belum punya akun? Daftar disini</string>
    <string name="text_btn_login">Login</string>
    <string name="text_title_username">Username</string>
    <string name="text_input_username">Username</string>
    <string name="text_title_email">Email</string>
    <string name="text_input_email">Email</string>
    <string name="text_title_password">Password</string>
    <string name="text_input_password">Password</string>
    <string name="text_confirm_password">Konfirmasi Password</string>
    <string name="text_register_your_account">Register</string>
    <string name="text_btn_register">Register</string>
    <string name="text_already_has_account">Sudah punya akun? Login disini!</string>
    <string name="text_btn_logout">Logout</string>
    <string name="login_failed">Login Gagal</string>
    <string name="login_success">Login Sukses</string>
    <string name="register_failed">Register Gagal</string>
    <string name="register_success">Register Sukses</string>
    <string name="logout_success">logout Sukses</string>
    <string name="error">Error</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
</resources>