<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/text_register_your_account"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/text_title_username"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username_regis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:hintEnabled="false"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_username"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username_regis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/text_input_username"
                android:padding="12dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_title_email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_username"
            app:layout_constraintTop_toBottomOf="@+id/til_username_regis" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_regis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_email"
            tools:visibility="visible"
            android:layout_marginHorizontal="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/text_input_email"
                android:padding="12dp"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_title_password"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_email"
            app:layout_constraintTop_toBottomOf="@+id/til_email_regis" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_password"
            app:passwordToggleEnabled="true"
            tools:visibility="visible"
            android:layout_marginHorizontal="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/text_input_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_confirm_password"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password_regis" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_confirm_password"
            app:passwordToggleEnabled="true"
            tools:visibility="visible"
            android:layout_marginHorizontal="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/text_confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_number_phone_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="parent"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_number_phone_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_register"
            android:textSize="16sp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_confirm_password_regis" />

        <TextView
            android:id="@+id/tv_nav_to_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="16dp"
            android:text="@string/text_already_has_account"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <ProgressBar
            android:id="@+id/pb_register"
            style="?android:attr/progressBarStyle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btn_register"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="@id/btn_register"
            app:layout_constraintTop_toTopOf="@id/btn_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.cardview.widget.CardView>